fixing white space tablet

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -28,7 +28,6 @@
         }
     }
 
-
     .mode-container {
         #container-unlimited > .core(97.5px, 0);
 
@@ -81,6 +80,10 @@
     #container-unlimited > .core(@fluidGridColumnWidth, 0);
 
     #grid > .core(@fluidGridColumnWidth, @fluidGridGutterWidth);
+
+	.row {
+		margin-left: 0;
+	}
 
     .blog > .page-header,
     .blog > .category-desc,
